@@ -1,3 +1,4 @@
+- Fixed an issue with notification step not identifying all users in a multi-user field for notification.
 - Fixed an issue when Sliced Invoices status was manually updated to paid, entries weren't released from Sliced Invoices steps.
-- Fixed validation issue in Assignee, User and Multi-User fields
 - Fixed an issue with the Status shortcode where users with the gravityflow_status_view_all capability don't see all entries when the shortcode security settings are set to disallow the display_all attribute.
+- Fixed validation issue in Assignee, User and Multi-User fields
